--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img id="envelope" src="https://i.imgur.com/1cX9nYy.png" alt="Envelope" />
     <div id="letter" class="hidden">
       <img src="IMG_0943.jpeg" alt="Your Photo" />
-      <div class="message">Happy 2 months &lt;3</div>
+      <div class="message">Happy 2 months. I just want to say that I appreciate you a lot </div>
     </div>
   </div>
 
