--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Click to open the letter</h1>
   <div class="envelope-container" onclick="toggleEnvelope()">
-    <img id="envelope" src="https://i.imgur.com/1cX9nYy.png" alt="Envelope" />
+    <img id="envelope" src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Envelope" />
     <div id="letter" class="hidden">
       <img src="IMG_0943.jpeg" alt="Your Photo" />
       <div class="message">Happy 2 months. I just want to say that I appreciate you a lot </div>
