--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <img id="envelope" src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Envelope" />
     <div id="letter" class="hidden">
       <img src="IMG_0943.jpeg" alt="Your Photo" />
-      <div class="message">Happy 2 months. I just want to say that I appreciate you a lot </div>
+      <div class="message">Happy 2 months <3. I just want to say that I appreciate you a lot. I know you're not too good with words but I can tell from your actions that you care a lot. 
+      Thank you for always being consistent with how you treat me, it means a lot to me. 期待我们的未来
+      </div>
     </div>
   </div>
 
