--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+   <audio autoplay loop>
+    <source src="song.mp3" type="audio/mpeg">
+  </audio>
   <h1>Click to open the letter</h1>
   <div class="envelope-container" onclick="toggleEnvelope()">
     <img id="envelope" src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Envelope" />
