--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       <div class="message">Happy 2 months <3. I just want to say that I appreciate you a lot. I know you're not too good with words but I can tell from your actions that you care a lot. 
       Thank you for always being consistent with how you treat me, it means a lot to me. 期待我们的未来 </div>
     </div>
-  </div>
-
+  </div> <!-- end of envelope-container -->
+<div class="music-controls">
+  <button id="music-toggle">▶ Play Music</button>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
