--- a/index.html
+++ b/index.html
@@ -7,21 +7,30 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-   <audio autoplay loop>
+  <!-- Audio (now with id!) -->
+  <audio id="bg-music" loop>
     <source src="song.mp3" type="audio/mpeg">
   </audio>
+
   <h1>Click to open the letter</h1>
+
   <div class="envelope-container" onclick="toggleEnvelope()">
     <img id="envelope" src="https://cdn-icons-png.flaticon.com/512/561/561127.png" alt="Envelope" />
     <div id="letter" class="hidden">
       <img src="IMG_0943.jpeg" alt="Your Photo" />
-      <div class="message">Happy 2 months <3. I just want to say that I appreciate you a lot. I know you're not too good with words but I can tell from your actions that you care a lot. 
-      Thank you for always being consistent with how you treat me, it means a lot to me. 期待我们的未来 </div>
+      <div class="message">
+        Happy 2 months <3. I just want to say that I appreciate you a lot.
+        I know you're not too good with words but I can tell from your actions that you care a lot. 
+        Thank you for always being consistent with how you treat me, it means a lot to me. 期待我们的未来 
+      </div>
     </div>
   </div> <!-- end of envelope-container -->
-<div class="music-controls">
-  <button id="music-toggle">▶ Play Music</button>
-</div>
+
+  <!-- Music Button -->
+  <div class="music-controls">
+    <button id="music-toggle">▶ Play Music</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
